# xoladelnik-clone

./: .gitignore  pyproject.toml
blog/: urls.py  views.py
blog/serializer/: blog.py
common/: urls.py  views.py
core/: jazzmin_conf.py  settings.py  urls.py
products/: serializers.py  urls.py  views.py
template/: about.html  base.html  blog-single.html  blog.html  cart.html  checkout.html  contact.html  index.html  product-single.html  shop.html  wishlist.html
template/auth/: register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/serializers/: __init__.py
